--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -3,7 +3,7 @@ import VideoPlayer from "../components/VideoPlayer";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Farrell Fitness | Membership">
+<Layout title="Membership">
   <section class="">
     <VideoPlayer client:visible videoPath="/videos/mainVideo.mp4"/>
     <div class="">
