--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const services: service[] = [
 ];
 ---
 
-<Layout title="Farrell Fitness | Gym & Performance Center">
+<Layout title="Gym & Performance Center">
   <div data-aos="fade" class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
   </div>
