--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -2,90 +2,79 @@
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import GoogleMapsReviews from "../components/GoogleMapsReviews";
+import PageLayout from "../layouts/PageLayout.astro";
 ---
 
-<Layout title="Farrell Fitness | Results">
-  <section class="">
-    <div class="flex flex-wrap">
-      <div class="flex w-full mb-20 flex-wrap">
-        <h1
-          class="sm:text-3xl text-2xl font-medium title-font lg:w-1/3 lg:mb-0 mb-4"
-        >
-          transformations<br />results & reviews
-        </h1>
-        <p class="lg:pl-6 lg:w-2/3 mx-auto text-xs font-normal">
-          Be inspired by member transformations, tangible results, and rave
-          reviews at Farrell Fitness. Witness stunning before-and-after photos,
-          experience evidence-based training programs, and join our welcoming
-          community. Achieve weight loss, strength gains, and athletic
-          improvements. Start your journey to a healthier, fitter you today!
-        </p>
-      </div>
-      <div class="flex flex-wrap md:-m-2 -m-1">
-        <div class="flex flex-wrap w-1/2">
-          <div class="md:p-2 p-1 w-1/2">
-            <Image
-              width={500}
-              height={300}
-              alt="gallery"
-              class="w-full object-cover h-full object-center block"
-              src="/images/transformation14-min.jpeg"
-            />
-          </div>
-          <div class="md:p-2 p-1 w-1/2">
-            <Image
-              width={500}
-              height={300}
-              alt="gallery"
-              class="w-full object-cover h-full object-center block"
-              src="/images/transformation25-min.jpeg"
-            />
-          </div>
-          <div class="md:p-2 p-1 w-full">
-            <Image
-              width={500}
-              height={300}
-              alt="gallery"
-              class="w-full h-full object-cover object-center block"
-              src="/images/transformation29-min.jpeg"
-            />
-          </div>
+<Layout title="Results">
+  <PageLayout
+    title="results & reviews"
+    summary="Experience member transformations, tangible results, and rave reviews at Farrell Fitness. Join our community for weight loss, strength gains, and athletic improvements."
+    videoPath=""
+  >
+    <div class="flex flex-wrap md:-m-2 -m-1">
+      <div class="flex flex-wrap w-1/2">
+        <div class="md:p-2 p-1 w-1/2">
+          <Image
+            width={600}
+            height={400}
+            alt="gallery"
+            class="w-full object-cover h-full object-center block"
+            src="/images/transformation14-min.jpeg"
+          />
         </div>
-        <div class="flex flex-wrap w-1/2">
-          <div class="md:p-2 p-1 w-full">
-            <Image
-              width={500}
-              height={300}
-              alt="gallery"
-              class="w-full h-full object-cover object-center block"
-              src="/images/transformation18-min.jpeg"
-            />
-          </div>
-          <div class="md:p-2 p-1 w-1/2">
-            <Image
-              width={500}
-              height={300}
-              alt="gallery"
-              class="w-full object-cover h-full object-center block"
-              src="/images/transformation3-min.jpeg"
-            />
-          </div>
-          <div class="md:p-2 p-1 w-1/2">
-            <Image
-              width={500}
-              height={300}
-              alt="gallery"
-              class="w-full object-cover h-full object-center block"
-              src="/images/transformation5-min.jpeg"
-            />
-          </div>
+        <div class="md:p-2 p-1 w-1/2">
+          <Image
+            width={600}
+            height={400}
+            alt="gallery"
+            class="w-full object-cover h-full object-center block"
+            src="/images/transformation25-min.jpeg"
+          />
+        </div>
+        <div class="md:p-2 p-1 w-full">
+          <Image
+            width={600}
+            height={400}
+            alt="gallery"
+            class="w-full h-full object-cover object-center block"
+            src="/images/transformation29-min.jpeg"
+          />
+        </div>
+      </div>
+      <div class="flex flex-wrap w-1/2">
+        <div class="md:p-2 p-1 w-full">
+          <Image
+            width={600}
+            height={400}
+            alt="gallery"
+            class="w-full h-full object-cover object-center block"
+            src="/images/transformation18-min.jpeg"
+          />
+        </div>
+        <div class="md:p-2 p-1 w-1/2">
+          <Image
+            width={600}
+            height={400}
+            alt="gallery"
+            class="w-full object-cover h-full object-center block"
+            src="/images/transformation3-min.jpeg"
+          />
+        </div>
+        <div class="md:p-2 p-1 w-1/2">
+          <Image
+            width={600}
+            height={400}
+            alt="gallery"
+            class="w-full object-cover h-full object-center block"
+            src="/images/transformation5-min.jpeg"
+          />
         </div>
       </div>
     </div>
-    <h1 class="w-full text-center mt-12 text-2xl mb-4">Google Reviews</h1>
-    <div class="h-[0.1rem] bg-gray-100 relative">
-      <div class="absolute h-full w-1/2 bg-orange-600"></div>
-    </div>
-    <GoogleMapsReviews client:load />
-  </section>
+  </PageLayout>
+  <h1 class="w-full text-center mt-12 text-2xl mb-4">Google Reviews</h1>
+  <div class="h-[0.1rem] bg-gray-100 relative">
+    <div class="absolute h-full w-1/2 bg-orange-600"></div>
+  </div>
+  <GoogleMapsReviews client:load />
 </Layout>
