Update Homepage and add link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,47 +1,94 @@
 ---
-import { Icon } from "astro-icon";
-import { Image } from "astro:assets";
-import Logo from "../assets/images/LogoCycles.webp";
-import Layout from "../layouts/Layout.astro";
+import ServiceIcon from "../components/ServiceIcon";
 import VideoPlayer from "../components/VideoPlayer";
+import Layout from "../layouts/Layout.astro";
+import FFLogo from "../components/FFLogo";
 
 interface service {
   icon: string;
   description: string;
+  url: string;
 }
 
 const services: service[] = [
-  { icon: "bench", description: "4000kg weights" },
-  { icon: "cardio", description: "+28 cardio equipment" },
-  { icon: "clean", description: "sanitation" },
-  { icon: "college", description: "professional staff" },
-  { icon: "gymequip", description: "+20 weight machines" },
-  { icon: "kcal", description: "personalized programs" },
-  { icon: "locker", description: "lockers" },
-  { icon: "massage", description: "sports massage" },
-  { icon: "measure", description: "measureable results" },
-  { icon: "privacy", description: "changing rooms" },
-  { icon: "shower", description: "private showers" },
-  { icon: "waist", description: "full body conditioning" },
+  {
+    url: "https://images.pexels.com/photos/260352/pexels-photo-260352.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "bench",
+    description: "4,000 kg weights",
+  },
+  {
+    url: "https://images.pexels.com/photos/1954524/pexels-photo-1954524.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "cardio",
+    description: "+28 cardio equipment",
+  },
+  {
+    url: "https://images.pexels.com/photos/5938382/pexels-photo-5938382.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "clean",
+    description: "sanitation",
+  },
+  {
+    url: "https://images.pexels.com/photos/2292837/pexels-photo-2292837.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "college",
+    description: "professional staff",
+  },
+  {
+    url: "https://images.pexels.com/photos/4608173/pexels-photo-4608173.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "gymequip",
+    description: "+20 weight machines",
+  },
+  {
+    url: "https://images.pexels.com/photos/5878699/pexels-photo-5878699.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "kcal",
+    description: "personalized programs",
+  },
+  {
+    url: "https://images.pexels.com/photos/4162587/pexels-photo-4162587.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "locker",
+    description: "lockers",
+  },
+  {
+    url: "https://images.pexels.com/photos/5473186/pexels-photo-5473186.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "massage",
+    description: "sports massage",
+  },
+  {
+    url: "https://images.pexels.com/photos/3143085/pexels-photo-3143085.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "measure",
+    description: "measureable results",
+  },
+  {
+    url: "https://images.pexels.com/photos/5000222/pexels-photo-5000222.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "privacy",
+    description: "changing rooms",
+  },
+  {
+    url: "https://images.pexels.com/photos/9155214/pexels-photo-9155214.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "shower",
+    description: "private showers",
+  },
+  {
+    url: "https://images.pexels.com/photos/6551070/pexels-photo-6551070.jpeg?auto=compress&cs=tinysrgb&w=400",
+    icon: "waist",
+    description: "full body conditioning",
+  },
 ];
 ---
 
 <Layout title="Gym & Performance Center">
-  <div data-aos="fade" class="flex justify-center items-center">
+  <!-- <div data-aos="fade" class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
-  </div>
+  </div> -->
+  <FFLogo />
   <VideoPlayer client:visible videoPath="/videos/OpenGym.mp4" />
   <ul class="flex flex-wrap">
     {
-      services.map(({ icon, description }) => (
-        <li
-          data-aos="fade-zoom-in"
-          data-aos-delay="0"
-          class="flex p-4 space-y-4 flex-col justify-center items-center text-center w-1/2 md:w-1/4"
-        >
-          <Icon name={icon} class="fill-gray-500 h-24" />
-          <div class="">{description}</div>
-        </li>
+      services.map(({ icon, description, url }) => (
+        <ServiceIcon
+          icon={icon}
+          description={description}
+          url={url}
+          client:load
+        />
       ))
     }
   </ul>
