--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -26,24 +26,24 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">8 Classes</td>
-              <td class="px-4 py-3">1 month</td>
-              <td class="px-4 py-3">€80</td>
+              <td class="px-4 py-3 font-normal">8 Classes</td>
+              <td class="px-4 py-3 font-normal">1 month</td>
+              <td class="px-4 py-3 font-normal">€80</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">12 Classes</td>
-              <td class="px-4 py-3">1 Month</td>
-              <td class="px-4 py-3">€90</td>
+              <td class="px-4 py-3 font-normal">12 Classes</td>
+              <td class="px-4 py-3 font-normal">1 Month</td>
+              <td class="px-4 py-3 font-normal">€90</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Classes & GYM</td>
-              <td class="px-4 py-3">1 Month</td>
-              <td class="px-4 py-3">€90</td>
+              <td class="px-4 py-3 font-normal">Classes & GYM</td>
+              <td class="px-4 py-3 font-normal">1 Month</td>
+              <td class="px-4 py-3 font-normal">€90</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Class</td>
-              <td class="px-4 py-3">1 Day</td>
-              <td class="px-4 py-3">€15</td>
+              <td class="px-4 py-3 font-normal">Class</td>
+              <td class="px-4 py-3 font-normal">1 Day</td>
+              <td class="px-4 py-3 font-normal">€15</td>
             </tr>
             <tr
               ><td
@@ -53,54 +53,54 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">1 Month</td>
-              <td class="px-4 py-3">€65</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">1 Month</td>
+              <td class="px-4 py-3 font-normal">€65</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">3 Months</td>
-              <td class="px-4 py-3">€179</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">3 Months</td>
+              <td class="px-4 py-3 font-normal">€179</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">6 Months</td>
-              <td class="px-4 py-3">€299</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">6 Months</td>
+              <td class="px-4 py-3 font-normal">€299</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">1 Year</td>
-              <td class="px-4 py-3">€549</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">1 Year</td>
+              <td class="px-4 py-3 font-normal">€549</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">1 Day</td>
-              <td class="px-4 py-3">€10</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">1 Day</td>
+              <td class="px-4 py-3 font-normal">€10</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">1 Week</td>
-              <td class="px-4 py-3">€30</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">1 Week</td>
+              <td class="px-4 py-3 font-normal">€30</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym (Student)</td>
-              <td class="px-4 py-3">1 Month</td>
-              <td class="px-4 py-3">€45</td>
+              <td class="px-4 py-3 font-normal">Gym (Student)</td>
+              <td class="px-4 py-3 font-normal">1 Month</td>
+              <td class="px-4 py-3 font-normal">€45</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym (Student)</td>
-              <td class="px-4 py-3">3 Months</td>
-              <td class="px-4 py-3">€120</td>
+              <td class="px-4 py-3 font-normal">Gym (Student)</td>
+              <td class="px-4 py-3 font-normal">3 Months</td>
+              <td class="px-4 py-3 font-normal">€120</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym (Student)</td>
-              <td class="px-4 py-3">6 Months</td>
-              <td class="px-4 py-3">€210</td>
+              <td class="px-4 py-3 font-normal">Gym (Student)</td>
+              <td class="px-4 py-3 font-normal">6 Months</td>
+              <td class="px-4 py-3 font-normal">€210</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym (Student)</td>
-              <td class="px-4 py-3">1 Year</td>
-              <td class="px-4 py-3">€360</td>
+              <td class="px-4 py-3 font-normal">Gym (Student)</td>
+              <td class="px-4 py-3 font-normal">1 Year</td>
+              <td class="px-4 py-3 font-normal">€360</td>
             </tr>
             <tr
               ><td
@@ -110,26 +110,26 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">Personal Training</td>
-              <td class="px-4 py-3">1 Session</td>
-              <td class="px-4 py-3">€40</td>
+              <td class="px-4 py-3 font-normal">Personal Training</td>
+              <td class="px-4 py-3 font-normal">1 Session</td>
+              <td class="px-4 py-3 font-normal">€40</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Personal Training 1 Week</td>
-              <td class="px-4 py-3">2 Sessions</td>
-              <td class="px-4 py-3">€120</td>
+              <td class="px-4 py-3 font-normal">Personal Training 1 Week</td>
+              <td class="px-4 py-3 font-normal">2 Sessions</td>
+              <td class="px-4 py-3 font-normal">€120</td>
             </tr>
             <tr>
-              <td class="px-4 py-3"
+              <td class="px-4 py-3 font-normal"
                 >Personal Training <br />5 Week Block (2 per week)</td
               >
-              <td class="px-4 py-3">10 Sessions</td>
-              <td class="px-4 py-3">€300</td>
+              <td class="px-4 py-3 font-normal">10 Sessions</td>
+              <td class="px-4 py-3 font-normal">€300</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Semi Personal Training <br /> 2 People</td>
-              <td class="px-4 py-3">1 Session</td>
-              <td class="px-4 py-3">€50</td>
+              <td class="px-4 py-3 font-normal">Semi Personal Training <br /> 2 People</td>
+              <td class="px-4 py-3 font-normal">1 Session</td>
+              <td class="px-4 py-3 font-normal">€50</td>
             </tr>
             <tr
               ><td
@@ -139,21 +139,21 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">Gym & Program</td>
-              <td class="px-4 py-3">1 Month</td>
-              <td class="px-4 py-3">€120</td>
+              <td class="px-4 py-3 font-normal">Gym & Program</td>
+              <td class="px-4 py-3 font-normal">1 Month</td>
+              <td class="px-4 py-3 font-normal">€120</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym & Program</td>
-              <td class="px-4 py-3">3 Months</td>
-              <td class="px-4 py-3">€345</td>
+              <td class="px-4 py-3 font-normal">Gym & Program</td>
+              <td class="px-4 py-3 font-normal">3 Months</td>
+              <td class="px-4 py-3 font-normal">€345</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Consultation ~ 2 Hours</td>
-              <td class="px-4 py-3"
+              <td class="px-4 py-3 font-normal">Consultation ~ 2 Hours</td>
+              <td class="px-4 py-3 font-normal"
                 >Body Scan <br /> Mobility Screen <br /> Strength Test</td
               >
-              <td class="px-4 py-3">€100</td>
+              <td class="px-4 py-3 font-normal">€100</td>
             </tr>
             <tr
               ><td
@@ -163,19 +163,19 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">Personal Training</td>
-              <td class="px-4 py-3">5 Sessions</td>
-              <td class="px-4 py-3">€200</td>
+              <td class="px-4 py-3 font-normal">Personal Training</td>
+              <td class="px-4 py-3 font-normal">5 Sessions</td>
+              <td class="px-4 py-3 font-normal">€200</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Gym</td>
-              <td class="px-4 py-3">3 Months</td>
-              <td class="px-4 py-3">€179</td>
+              <td class="px-4 py-3 font-normal">Gym</td>
+              <td class="px-4 py-3 font-normal">3 Months</td>
+              <td class="px-4 py-3 font-normal">€179</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Program</td>
-              <td class="px-4 py-3">3 Months</td>
-              <td class="px-4 py-3">€120</td>
+              <td class="px-4 py-3 font-normal">Program</td>
+              <td class="px-4 py-3 font-normal">3 Months</td>
+              <td class="px-4 py-3 font-normal">€120</td>
             </tr>
             <tr>
               <td class="h-[0.2px] bg-gray-200 w-full"></td>
@@ -183,9 +183,9 @@ import Layout from "../layouts/Layout.astro";
               <td class="h-[0.2px] bg-gray-200 w-full"></td>
             </tr>
             <tr>
-              <td class="px-4 py-3"></td>
-              <td class="px-4 py-3"></td>
-              <td class="px-4 py-3">€499</td>
+              <td class="px-4 py-3 font-normal"></td>
+              <td class="px-4 py-3 font-normal"></td>
+              <td class="px-4 py-3 font-normal">€499</td>
             </tr>
             <tr
               ><td
@@ -195,14 +195,14 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">Sports Massage <br />(Non memeber)</td>
-              <td class="px-4 py-3"></td>
-              <td class="px-4 py-3">€60</td>
+              <td class="px-4 py-3 font-normal">Sports Massage <br />(Non memeber)</td>
+              <td class="px-4 py-3 font-normal"></td>
+              <td class="px-4 py-3 font-normal">€60</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Sports Massage <br />(Memeber)</td>
-              <td class="px-4 py-3"></td>
-              <td class="px-4 py-3">€50</td>
+              <td class="px-4 py-3 font-normal">Sports Massage <br />(Memeber)</td>
+              <td class="px-4 py-3 font-normal"></td>
+              <td class="px-4 py-3 font-normal">€50</td>
             </tr>
             <tr
               ><td
@@ -212,14 +212,14 @@ import Layout from "../layouts/Layout.astro";
               ></tr
             >
             <tr>
-              <td class="px-4 py-3">Styku Body Scan</td>
-              <td class="px-4 py-3"></td>
-              <td class="px-4 py-3">€30</td>
+              <td class="px-4 py-3 font-normal">Styku Body Scan</td>
+              <td class="px-4 py-3 font-normal"></td>
+              <td class="px-4 py-3 font-normal">€30</td>
             </tr>
             <tr>
-              <td class="px-4 py-3">Styku Body Scan <br />(Student)</td>
-              <td class="px-4 py-3"></td>
-              <td class="px-4 py-3">€20</td>
+              <td class="px-4 py-3 font-normal">Styku Body Scan <br />(Student)</td>
+              <td class="px-4 py-3 font-normal"></td>
+              <td class="px-4 py-3 font-normal">€20</td>
             </tr>
           </tbody>
         </table>
