--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,7 +55,7 @@ const { title } = Astro.props;
     <div class="h-[.1rem] bg-gray-200 rounded overflow-hidden relative z-20">
       <div class="w-24 h-full bg-orange-600"></div>
     </div>
-    <div class="relative mx-6 my-6 md:my-24">
+    <div class="relative mx-6 my-12 md:my-24 space-y-12 md:space-y-24">
       <slot />
       <Footer />
     </div>
