--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,8 +78,33 @@ const services: service[] = [
   <!-- <div data-aos="fade" class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
   </div> -->
-  <FFLogo />
   <VideoPlayer client:visible videoPath="/videos/OpenGym.mp4" />
+  <FFLogo />
+  <div>
+    <h1 class="md:text-8xl text-4xl font-black text-center flex flex-col">
+      <span>sign up to</span>
+      <a
+        href="https://legitfit.com/authenticate/signup/FarrellFitness"
+        class="text-orange-600 hover:text-orange-800 hover:cursor-pointer"
+      >
+        farrell fitness
+      </a>
+      <span>now</span>
+    </h1>
+  </div>
+  <h1 class="md:text-8xl text-4xl text-center">Opening Hours</h1>
+  <div class="md:space-y-8 space-y-4">
+    <p class="flex justify-between items-center w-full md:text-4xl">
+      <span>Monday - Friday</span><span class="bg-orange-600 px-2 py-1"
+        >6:00am - 9:30pm</span
+      >
+    </p>
+    <p class="flex justify-between w-full md:text-4xl">
+      <span>Saturday - Sunday</span><span class="bg-orange-600 px-2 py-1"
+        >8:00am - 4:00pm</span
+      >
+    </p>
+  </div>
   <ul class="flex flex-wrap">
     {
       services.map(({ icon, description, url }) => (
@@ -93,8 +118,8 @@ const services: service[] = [
     }
   </ul>
 
-  <section class="relative my-12">
-    <div class="mx-auto flex sm:flex-nowrap flex-wrap">
+  <section class="relative">
+    <div class="mx-auto flex sm:flex-nowrap flex-wrap space-y-12 md:space-y-0">
       <div
         data-aos="fade-right"
         class="lg:w-2/3 md:w-1/2 bg-gray-300 overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative -mx-6 md:ml-0"
@@ -109,26 +134,26 @@ const services: service[] = [
           class="bg-white relative flex flex-wrap py-6 rounded shadow-md text-gray-950"
         >
           <div class="lg:w-1/2 px-6">
-            <h2 class="title-font font-semibold text-xs">
+            <h2 class="font-semibold text-xs">
               Farrell Fitness 27, Woodbine Business Park, New Ross, Co. Wexford
             </h2>
             <p class="mt-1">Gym & Fitness Center</p>
           </div>
           <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
-            <h2 class="title-font font-semibold text-xs pr-4">EMAIL</h2>
+            <h2 class="font-semibold text-xs pr-4">EMAIL</h2>
             <a class="text-orange-600 md:text-xs text-xxs"
               >info.farrellfitness<br class="hidden md:block" />@gmail.com</a
             >
-            <h2 class="title-font font-semibold text-xs mt-4">Phone</h2>
+            <h2 class="font-semibold text-xs mt-4">Phone</h2>
             <p class="">087 775 9716</p>
           </div>
         </div>
       </div>
       <div
         data-aos="fade-right"
-        class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0"
+        class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 md:mt-0"
       >
-        <h2 class="text-lg mb-1 font-medium title-font text-orange-500">
+        <h2 class="text-lg mb-1 font-medium text-orange-600">
           Contact us
         </h2>
         <p class="mb-">
@@ -141,7 +166,7 @@ const services: service[] = [
             type="text"
             id="name"
             name="name"
-            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 text-base outline-none py-1 px-3 transition-colors duration-200 ease-in-out"
+            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 text-base outline-none py-1 px-3 transition-colors duration-200 ease-in-out text-gray-900"
           />
         </div>
         <div class="relative mb-4">
@@ -150,7 +175,7 @@ const services: service[] = [
             type="email"
             id="email"
             name="email"
-            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 text-base outline-none py-1 px-3 transition-colors duration-200 ease-in-out"
+            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 text-base outline-none py-1 px-3 transition-colors duration-200 ease-in-out text-gray-900"
           />
         </div>
         <div class="relative mb-4">
@@ -158,11 +183,11 @@ const services: service[] = [
           <textarea
             id="message"
             name="message"
-            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 h-32 text-base outline-none py-1 px-3 resize-none transition-colors duration-200 ease-in-out"
+            class="w-full bg-white rounded border border-gray-300 focus:border-orange-500 focus:ring-2 focus:ring-orange-200 h-32 text-base outline-none py-1 px-3 resize-none transition-colors duration-200 ease-in-out text-gray-900"
           ></textarea>
         </div>
         <button
-          class="text-white bg-orange-500 border-0 py-2 px-6 focus:outline-none hover:bg-orange-600 rounded text-lg"
+          class="text-white bg-orange-600 border-0 py-2 px-6 focus:outline-none hover:bg-orange-800 rounded text-lg"
           >Send message</button
         >
       </div>
