--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -3,6 +3,17 @@ import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import GoogleMapsReviews from "../components/GoogleMapsReviews";
 import PageLayout from "../layouts/PageLayout.astro";
+
+function generateRandomIntegers() {
+  const result = [];
+  for (let i = 0; i <= 5; i++) {
+    const randomInt = Math.floor(Math.random() * 37) + 1;
+    result.push(randomInt);
+  }
+  return result;
+}
+
+let randomNumbers = generateRandomIntegers();
 ---
 
 <Layout title="Results">
@@ -19,7 +30,7 @@ import PageLayout from "../layouts/PageLayout.astro";
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src="/images/transformation14-min.jpeg"
+            src={`/images/transformation${randomNumbers[0]}-min.jpeg`}
           />
         </div>
         <div class="md:p-2 p-1 w-1/2">
@@ -28,7 +39,7 @@ import PageLayout from "../layouts/PageLayout.astro";
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src="/images/transformation25-min.jpeg"
+            src={`/images/transformation${randomNumbers[1]}-min.jpeg`}
           />
         </div>
         <div class="md:p-2 p-1 w-full">
@@ -37,7 +48,7 @@ import PageLayout from "../layouts/PageLayout.astro";
             height={400}
             alt="gallery"
             class="w-full h-full object-cover object-center block"
-            src="/images/transformation29-min.jpeg"
+            src={`/images/transformation${randomNumbers[2]}-min.jpeg`}
           />
         </div>
       </div>
@@ -48,7 +59,7 @@ import PageLayout from "../layouts/PageLayout.astro";
             height={400}
             alt="gallery"
             class="w-full h-full object-cover object-center block"
-            src="/images/transformation18-min.jpeg"
+            src={`/images/transformation${randomNumbers[3]}-min.jpeg`}
           />
         </div>
         <div class="md:p-2 p-1 w-1/2">
@@ -57,7 +68,7 @@ import PageLayout from "../layouts/PageLayout.astro";
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src="/images/transformation3-min.jpeg"
+            src={`/images/transformation${randomNumbers[4]}-min.jpeg`}
           />
         </div>
         <div class="md:p-2 p-1 w-1/2">
@@ -66,7 +77,7 @@ import PageLayout from "../layouts/PageLayout.astro";
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src="/images/transformation5-min.jpeg"
+            src={`/images/transformation${randomNumbers[5]}-min.jpeg`}
           />
         </div>
       </div>
