--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ const services: service[] = [
     </h1>
   </div>
   <h1 class="md:text-8xl text-4xl text-center">Opening Hours</h1>
-  <div class="md:space-y-8 space-y-4">
+  <div class="md:space-y-8 space-y-4 text-sm">
     <p class="flex justify-between items-center w-full md:text-4xl">
       <span>Monday - Friday</span><span class="bg-orange-600 px-2 py-1"
         >6:00am - 9:30pm</span
