Added merchandise page

--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -1,9 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import Layout from "../layouts/Layout.astro";
-import VideoPlayer from "../components/VideoPlayer";
-import PageLayout from "../layouts/PageLayout.astro";
 import ClassTimetable from "../components/ClassTimetable.astro";
+import Layout from "../layouts/Layout.astro";
+import PageLayout from "../layouts/PageLayout.astro";
 
 type Class = {
   title: string;
@@ -41,7 +40,7 @@ const classes: Class[] = [
   >
     <ClassTimetable />
 
-    <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+    <div class="flex flex-wrap">
       {
         classes.map(({ title, excerpt, url }) => (
           <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
