--- a/src/components/ClassTimetable.astro
+++ b/src/components/ClassTimetable.astro
@@ -13,7 +13,7 @@ const classes = [
 ---
 
 <div
-  class="flex flex-col w-full justify-center items-start my-12 md:my-24"
+  class="flex flex-col w-full justify-center items-start mb-12 md:mb-24"
 >
   <div class="flex flex-col space-y-1 text-2xl md:text-3xl mb-3 md:mb-6">
     <h1>summer timetable</h1>
