Convert Images to WebP

--- a/src/pages/merch.astro
+++ b/src/pages/merch.astro
@@ -8,37 +8,37 @@ const items = [
     category: "Top's",
     title: "Hoody",
     price: "40.00",
-    url: "/images/merch1.jpg",
+    url: "/images/merch1.webp",
   },
   {
     category: "Top's",
     title: "Training Top",
     price: "30.00",
-    url: "/images/merch2.jpg",
+    url: "/images/merch2.webp",
   },
   {
     category: "Shirt's",
     title: "Polo",
     price: "15.00",
-    url: "/images/merch3.jpg",
+    url: "/images/merch3.webp",
   },
   {
     category: "Bags's",
     title: "Backpack",
     price: "20.00",
-    url: "/images/merch4.jpg",
+    url: "/images/merch4.webp",
   },
   {
     category: "Hat's",
     title: "Beanie",
     price: "10.00",
-    url: "/images/merch5.png",
+    url: "/images/merch5.webp",
   },
   {
     category: "Mask's",
     title: "Cottton Mask",
     price: "5.00",
-    url: "/images/merch6.jpg",
+    url: "/images/merch6.webp",
   },
 ];
 ---
@@ -77,7 +77,10 @@ const items = [
       class="flex flex-col sm:flex-row sm:items-center items-start mt-12 md:mt-24"
     >
       <h1 class="flex-grow sm:pr-16">
-        Discover the perfect gear for your fitness journey. Visit our gym and inquire about purchasing any of these items. With limited stock available, seize the opportunity to look your best while pushing your limits.
+        Discover the perfect gear for your fitness journey. Visit our gym and
+        inquire about purchasing any of these items. With limited stock
+        available, seize the opportunity to look your best while pushing your
+        limits.
       </h1>
       <div
         class="flex-shrink-0 text-white bg-orange-600 border-0 py-2 px-8 focus:outline-none rounded mt-10 sm:mt-0"
