--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -30,7 +30,7 @@ let randomNumbers = generateRandomIntegers();
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[0]}-min.jpeg`}
+            src={`/images/transformation${randomNumbers[0]}-min.webp`}
           />
         </div>
         <div class="md:p-2 p-1 w-1/2">
@@ -39,7 +39,7 @@ let randomNumbers = generateRandomIntegers();
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[1]}-min.jpeg`}
+            src={`/images/transformation${randomNumbers[1]}-min.webp`}
           />
         </div>
         <div class="md:p-2 p-1 w-full">
@@ -48,7 +48,7 @@ let randomNumbers = generateRandomIntegers();
             height={400}
             alt="gallery"
             class="w-full h-full object-cover object-center block"
-            src={`/images/transformation${randomNumbers[2]}-min.jpeg`}
+            src={`/images/transformation${randomNumbers[2]}-min.webp`}
           />
         </div>
       </div>
@@ -59,7 +59,7 @@ let randomNumbers = generateRandomIntegers();
             height={400}
             alt="gallery"
             class="w-full h-full object-cover object-center block"
-            src={`/images/transformation${randomNumbers[3]}-min.jpeg`}
+            src={`/images/transformation${randomNumbers[3]}-min.webp`}
           />
         </div>
         <div class="md:p-2 p-1 w-1/2">
@@ -68,7 +68,7 @@ let randomNumbers = generateRandomIntegers();
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[4]}-min.jpeg`}
+            src={`/images/transformation${randomNumbers[4]}-min.webp`}
           />
         </div>
         <div class="md:p-2 p-1 w-1/2">
@@ -77,7 +77,7 @@ let randomNumbers = generateRandomIntegers();
             height={400}
             alt="gallery"
             class="w-full object-cover h-full object-center block"
-            src={`/images/transformation${randomNumbers[5]}-min.jpeg`}
+            src={`/images/transformation${randomNumbers[5]}-min.webp`}
           />
         </div>
       </div>
