--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import ServiceIcon from "../components/ServiceIcon";
 import VideoPlayer from "../components/VideoPlayer";
 import Layout from "../layouts/Layout.astro";
 import FFLogo from "../components/FFLogo";
+import PricingComponent from "../components/PricingComponent.astro";
 
 interface service {
   icon: string;
@@ -105,6 +106,7 @@ const services: service[] = [
       >
     </p>
   </div>
+  <PricingComponent />
   <ul class="flex flex-wrap">
     {
       services.map(({ icon, description, url }) => (
@@ -153,9 +155,7 @@ const services: service[] = [
         data-aos="fade-right"
         class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 md:mt-0"
       >
-        <h2 class="text-lg mb-1 font-medium text-orange-600">
-          Contact us
-        </h2>
+        <h2 class="text-lg mb-1 font-medium text-orange-600">Contact us</h2>
         <p class="mb-">
           to find out more about what we have to offer and how we can help you
           start your fitness journey
